# projet_ML_Optimisation

./: .gitignore  README.md  formation_pytorch.py  pyproject.toml  requirements.txt  run_pipeline.py
notebooks/: 01_exploration.ipynb  02_analysis.ipynb  G10_Projet_Complet.ipynb
results/: baseline_metrics.json  best_params.json  optuna_study.db  optuna_trials.csv
src/: __init__.py  config.py  data_loader.py  loss_landscape_analysis.py  metrics.py  model_setup.py  optimization.py  trainer.py  visualization.py
tests/: test_data_loader.py
