[tool.poetry]
name = "g10-camembert-regularisation"
version = "0.1.0"
packages = [{include = "src"}]
description = "G10 - Fine-tuning CamemBERT sur Allociné : Étude de la régularisation et généralisation (P02)"
authors = [
	"NGOULOU NGOUBILI Irch",
	"MOYO Guillaine",
	"DOMEVENOU Wisdom",
]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
torch = ">=2.2.0"
transformers = "^4.40.0"
datasets = "^2.19.0"
optuna = "^3.6.0"
scikit-learn = "^1.4.0"
numpy = ">=1.26.0,<2.0"
pandas = ">=2.2.0,<2.3"
matplotlib = "^3.8.0"
seaborn = "^0.13.0"
tqdm = "^4.66.0"
sentencepiece = "^0.2.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.0"
black = "^24.4.0"
ruff = "^0.4.0"

[tool.poetry.scripts]
run-optimization = "src.optimization:main"
run-landscape  = "src.visualization:main"
run-landscape-loss = "src.loss_landscape_analysis:main"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
